style: fix spacing and header height

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -79,13 +79,12 @@ header {
                 }
             }
         }
-
         
     }
     
     @media (min-width: 900px) {
         @include bg-header;
-        height: 70vh;
+        height: 95vh;
     }
 }
 
